# deepeye-lite

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.webcam.yml  docker-compose.yml  mediamtx.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  ipcam.py  main.py  models.py  webcam.py
backend/app/inference/: __init__.py  draw.py  models_dir.py  worker.py
backend/app/streaming/: __init__.py  capture.py  manager.py
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: BboxOverlay.tsx  Header.tsx  HlsPlayer.tsx  Modal.tsx  ModelConfModal.tsx  ModelManagerModal.tsx  ModelSettingsModal.tsx  SegmentedToggle.tsx
frontend/src/pages/: HomePage.tsx  IpcamPage.tsx  ModelsPage.tsx  WebcamPage.tsx
frontend/src/utils/: colors.ts
